--- a/package.json
+++ b/package.json
@@ -24,10 +24,11 @@
     "@fortawesome/free-regular-svg-icons": "^5.11.2",
     "@fortawesome/free-solid-svg-icons": "^5.11.2",
     "@ng-bootstrap/ng-bootstrap": "^5.1.2",
+    "@stomp/rx-stomp": "^0.3.4",
     "bootstrap": "^4.3.1",
     "jquery": "^3.4.1",
     "jwt-decode": "^2.2.0",
-    "ng-multiselect-dropdown": "^0.2.6",
+    "ng-multiselect-dropdown": "0.2.4",
     "rxjs": "~6.4.0",
     "tslib": "^1.9.0",
     "zone.js": "~0.9.1"
